z-index fix

--- a/styles.less
+++ b/styles.less
@@ -110,6 +110,7 @@ h2 {
     height: 40px;
     background: rgba(30, 42, 26, 0.6);
     width: 100%;
+    z-index: 999;
     // -webkit-transform: rotate(0deg);
     // transform: rotate(0deg);
     .links {
@@ -272,6 +273,7 @@ footer {
           height: 200px;
           position: relative;
           bottom: 28px;
+          z-index: 1;
         }
     }
     h3,
